@@ -21,6 +21,9 @@
 	http://romainfrancois.blog.free.fr/index.php?
 	post/2009/06/17/with-semantics-for-java-objects-in-rJava
 
+    o	added names() method for jobjRef to facilitate code
+	completion (based on code by RF: http://tr.im/w33B)
+
 0.6-3	2009-06-14
     o	update to JRI 0.4-3 (adds REngine API, enhanced support for
 	environments and references)
